objects/rosco_case_state__c/rosco_case_state__c.object-meta.xml
<CustomObject>
    <label>rosco_case_state</label>
    <nameField>
        <label>name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>rosco_case_states</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>