objects/rosco_case_state__c/fields/actions__c.field-meta.xml
<CustomField>
    <fullName>actions__c</fullName>
    <label>actions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>