objects/rosco_case_state__c/fields/assessment__c.field-meta.xml
<CustomField>
    <fullName>assessment__c</fullName>
    <label>assessment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>