objects/rosco_case_state__c/fields/CANLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>CANLastModifiedDate__c</fullName>
    <label>CANLastModifiedDate</label>
    <type>DateTime</type>
</CustomField>