objects/rosco_case_state__c/fields/case__c.field-meta.xml
<CustomField>
    <fullName>case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>rosco_case_states</relationshipLabel>
    <relationshipName>rosco_case_states</relationshipName>
    <type>Lookup</type>
</CustomField>