objects/rosco_case_state__c/fields/conditions__c.field-meta.xml
<CustomField>
    <fullName>conditions__c</fullName>
    <label>conditions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>