objects/rosco_case_state__c/fields/needs__c.field-meta.xml
<CustomField>
    <fullName>needs__c</fullName>
    <label>needs</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>