objects/rosco_case_state__c/fields/objective__c.field-meta.xml
<CustomField>
    <fullName>objective__c</fullName>
    <label>objective</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>