objects/rosco_case_state__c/fields/plan__c.field-meta.xml
<CustomField>
    <fullName>plan__c</fullName>
    <label>plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>