objects/rosco_case_state__c/fields/SOAPLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>SOAPLastModifiedDate__c</fullName>
    <label>SOAPLastModifiedDate</label>
    <type>DateTime</type>
</CustomField>