objects/rosco_case_state__c/fields/subjective__c.field-meta.xml
<CustomField>
    <fullName>subjective__c</fullName>
    <label>subjective</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>